@@ -1,5 +1,12 @@
 2007-07-08  Roger Leigh  <rleigh@debian.org>
 
+	* test/sbuild-chroot-block-device.cc, test/sbuild-chroot.cc,
+	test/sbuild-chroot-file.cc, test/sbuild-chroot-lvm-snapshot.cc,
+	test/sbuild-chroot-plain.cc: Add CHROOT_SCRIPT_CONFIG to
+	environment checks.
+
+2007-07-08  Roger Leigh  <rleigh@debian.org>
+
 	* NEWS: Document --session-name.
 
 2007-07-08  Roger Leigh  <rleigh@debian.org>
